.deploy/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tensorleap-doc
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: tensorleap-doc
              servicePort: http
            path: /
